--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             </div>
         </nav>
     </header>
+    <section>
+        <img class="logo" src="" alt="">
+    </section>
 </body>
 
 </html>
