--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
-    
+    <div class="input-group">
+        <img class="icon input-group__loupe-icon" src="images/loupe.png" alt="">
+        <input class="input" type="text" placeholder="Search Google or type a URL" autocomplete="off" maxlength="2024">
+        <img class="icon input-group__google-mic" src="images/google-mic.png" alt="">
+    </div>
 </body>
 
 </html>
