--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
 </head>
 
 <body>
-    <div class="input-group">
-        <img class="icon input-group__loupe-icon" src="images/loupe.png" alt="">
-        <input class="input" type="text" placeholder="Search Google or type a URL" autocomplete="off" maxlength="2024">
-        <img class="icon input-group__google-mic" src="images/google-mic.png" alt="">
+    <div class="badge">
+        <span class="badge__icon delay-1s">
+            <img class="icon" src="images/options.svg" alt="facebook logo">
+        </span>
+        <span class="icon-container">
+            <img class="icon" src="images/youtube.svg" alt="facebook logo">
+        </span>
+        <p>Youtube</p>
     </div>
 </body>
 
