reponsive input-group

--- a/index.html
+++ b/index.html
@@ -13,14 +13,10 @@
 </head>
 
 <body>
-    <div class="badge">
-        <span class="badge__icon delay-1s">
-            <img class="icon" src="images/options.svg" alt="facebook logo">
-        </span>
-        <span class="icon-container">
-            <img class="icon" src="images/youtube.svg" alt="facebook logo">
-        </span>
-        <p>Youtube</p>
+    <div class="input-group">
+        <img class="icon icon__loupe" src="images/loupe.svg" alt="">
+        <input class="input" type="text" placeholder="Search Google or type a URL" maxlength="2024" autocomplete="off">
+        <img class="icon" src="images/google_mic.svg" alt="">
     </div>
 </body>
 
