finish badge and input-group

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
     <div class="input-group">
-        <img class="icon icon__loupe" src="images/loupe.svg" alt="">
-        <input class="input" type="text" placeholder="Search Google or type a URL" maxlength="2024" autocomplete="off">
+        <img class="icon-loupe" src="images/loupe.svg" alt="">
+        <input type="text" class="input" placeholder="Search Google or type a URL">
         <img class="icon" src="images/google_mic.svg" alt="">
     </div>
 </body>
