finish logo and shortcut component

--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
 </head>
 
 <body>
-    <div class="input-group">
-        <img class="icon-loupe" src="images/loupe.svg" alt="">
-        <input type="text" class="input" placeholder="Search Google or type a URL">
-        <img class="icon" src="images/google_mic.svg" alt="">
+    <div class="container logo">
+        <img src="images/google.gif" alt="">
     </div>
 </body>
 
