--- a/index.html
+++ b/index.html
@@ -33,73 +33,80 @@
             </li>
         </ul>
     </header>
-    <section class="container">
-        <div class="container logo">
-            <img src="images/google.gif" alt="">
-        </div>
+
+    <div class="container logo">
+        <img src="images/google.gif" alt="">
+    </div>
+    <div class="container">
         <div class="input-group">
             <img class="icon-loupe" src="images/loupe.svg" alt="">
             <input type="text" class="input" placeholder="Search Google or type a URL">
             <img class="icon" src="images/google_mic.svg" alt="">
         </div>
-        <div class="container grid grid-1x3 grid-1x4 grid-1x5">
-            <div class="badge">
-                <a href="#">
-                    <span class="badge__icon-container">
-                        <img class="badge__icon" src="images/options.svg" alt="facebook logo">
-                    </span>
-                    <span class="icon-container">
-                        <img class="icon" src="images/youtube.svg" alt="facebook logo">
-                    </span>
-                    <p>Youtube</p>
-                </a>
-            </div>
-            <div class="badge">
-                <a href="#">
-                    <span class="badge__icon-container">
-                        <img class="badge__icon" src="images/options.svg" alt="facebook logo">
-                    </span>
-                    <span class="icon-container">
-                        <img class="icon" src="images/gmail.svg" alt="facebook logo">
-                    </span>
-                    <p>Gmail</p>
-                </a>
-            </div>
-            <div class="badge">
-                <a href="#">
-                    <span class="badge__icon-container">
-                        <img class="badge__icon" src="images/options.svg" alt="facebook logo">
-                    </span>
-                    <span class="icon-container">
-                        <img class="icon" src="images/facebook.svg" alt="facebook logo">
-                    </span>
-                    <p>Facebook</p>
-                </a>
-            </div>
-            <div class="badge">
-                <a href="#">
-                    <span class="badge__icon-container">
-                        <img class="badge__icon" src="images/options.svg" alt="facebook logo">
-                    </span>
-                    <span class="icon-container">
-                        <img class="icon" src="images/google.svg" alt="facebook logo">
-                    </span>
-                    <p>google</p>
-                </a>
-            </div>
-            <div class="badge">
-                <a href="#">
-                    <span class="badge__icon-container">
-                        <img class="badge__icon" src="images/options.svg" alt="facebook logo">
-                    </span>
-                    <span class="icon-container">
-                        <img class="icon" src="images/plus.svg" alt="facebook logo">
-                    </span>
-                    <p>Add short</p>
-                </a>
-            </div>
+    </div>
+    <div class="container grid grid-1x3 grid-1x4 grid-1x5">
+        <div class="badge">
+            <a href="#">
+                <span class="badge__icon-container">
+                    <img class="badge__icon" src="images/options.svg" alt="facebook logo">
+                </span>
+                <span class="icon-container">
+                    <img class="icon" src="images/youtube.svg" alt="facebook logo">
+                </span>
+                <p>Youtube</p>
+            </a>
         </div>
-    </section>
+        <div class="badge">
+            <a href="#">
+                <span class="badge__icon-container">
+                    <img class="badge__icon" src="images/options.svg" alt="facebook logo">
+                </span>
+                <span class="icon-container">
+                    <img class="icon" src="images/gmail.svg" alt="facebook logo">
+                </span>
+                <p>Gmail</p>
+            </a>
+        </div>
+        <div class="badge">
+            <a href="#">
+                <span class="badge__icon-container">
+                    <img class="badge__icon" src="images/options.svg" alt="facebook logo">
+                </span>
+                <span class="icon-container">
+                    <img class="icon" src="images/facebook.svg" alt="facebook logo">
+                </span>
+                <p>Facebook</p>
+            </a>
+        </div>
+        <div class="badge">
+            <a href="#">
+                <span class="badge__icon-container">
+                    <img class="badge__icon" src="images/options.svg" alt="facebook logo">
+                </span>
+                <span class="icon-container">
+                    <img class="icon" src="images/google.svg" alt="facebook logo">
+                </span>
+                <p>google</p>
+            </a>
+        </div>
+        <div class="badge">
+            <a href="#">
+                <span class="badge__icon-container">
+                    <img class="badge__icon" src="images/options.svg" alt="facebook logo">
+                </span>
+                <span class="icon-container">
+                    <img class="icon" src="images/plus.svg" alt="facebook logo">
+                </span>
+                <p>Add short</p>
+            </a>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <button class="btn">
+            <img class="icon" src="images/pencil.svg" alt="pencil">
+        </button>
+    </footer>
 </body>
 
 </html>
